--- a/app/src/main/res/layout/activity_image_display.xml
+++ b/app/src/main/res/layout/activity_image_display.xml
@@ -1,18 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_dark"
     tools:context="com.ea7jmf.androidcourse_imagesearch.activities.ImageDisplayActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.ea7jmf.androidcourse_imagesearch.thirdparty.TouchImageView
         android:id="@+id/ivImageResult"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:background="@android:color/background_dark"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:adjustViewBounds="true"
-        android:scaleType="centerInside" />
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
